// Protocol Buffers es un Lenguaje de definici칩n de interfaz simple (IDL) independiente del lenguaje y de plataforma neutra para definir esquemas de estructura de datos y programar interfaces. Es compatible con los formatos de cable binarios y de texto, y funciona con varios protocolos de conexi칩n est치ndar diferentes en plataformas distintas.

syntax = "proto3";

package conversion;

service Conversion {
    rpc convertirLongitudProto(ConversionRequest) returns (ConversionResponse);
}
// Estructura de como se ve una petici칩n
message ConversionRequest {
    float valorP = 1;
    string unidadOrigenP = 2;
    string unidadDestinoP = 3;
}
// Estructura de como se ve una respuesta
message ConversionResponse {
    float resultado = 1;
}

// NOTA Referencias: 
// https://protobuf.dev/reference/protobuf/proto3-spec/
// https://cloud.google.com/apis/design/proto3?hl=es-419